SonarCube warning